[package]
name = "tokactor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tokactor"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["rt", "sync", "time", "macros"]}
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
criterion = { version = "0.5", features = ["html_reports", "async_tokio"]}

[[bench]]
name = "actor"
harness = false

[build]
profiler = true
