[package]
name = "tokactor"
version = "2.0.5"
authors = ["Alec Di Vito"]
description = "A actor model framework wrapped around tokio"
documentation = "https://docs.rs/tokactor"
license = "MIT"
edition = "2021"
keywords = ["actor", "tokactor"]
readme = "README.md"
homepage = "https://github.com/wasmcompute/tokactor"
categories = ["actor", "tokio", "async"]

[features]
default = []

[lib]
name = "tokactor"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = [
    "rt-multi-thread",
    "sync",
    "time",
    "signal",
    "net",
    "io-util",
    "macros",
] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
httparse = "1.8.0"
http = "0.2.9"
tracing-subscriber = "0.3"

[[bench]]
name = "actor"
harness = false

[build]
profiler = true
